<resources>
    <string name="app_name">PrintServer Client</string>
    <string name="app_version">v0.0.1</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="title_tarefas">Tarefas</string>
    <string name="title_arquivos_enviados">Arquivos enviados</string>
    <string name="title_sobre">Sobre</string>
    <string name="title_form_arquivo">Arquivo enviado</string>
    <string name="title_detalhes_arquivo">Detalhes do arquivo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="sobre_app">sobre</string>
    <string name="nome_sobre">Danielle Faria "                       " 167575
                            \nGustavo Antoniassi  "             " 178107
                           \nMatheus Kleparde   "                "  177216
    </string>

    <string name="desenvolvimento_app">Aplicativo desenvolvido durante a disciplina de Tópicos Especias em SI,
                                        do curso de Sistema de Informaçao da UNIPAR - Umuarama
    </string>

    <string name="professor_nome"> Professor: Carlos Eduardo Pelegrin</string>

    <string name="format_nome_arquivo">%s</string>
    <string name="format_enviado_em">Enviado em: %s</string>
    <string name="format_ultima_impressao">Última impressão: %s</string>

    <string name="texto_sem_tarefas">Nenhuma tarefa em andamento no momento</string>
    <string name="cadastro_nome_do_arquivo">Nome do arquivo</string>
    <string name="cadastro_data_de_envio">Data de envio</string>
    <string name="cadastro_ultima_impressao">Última impressão</string>
    <string name="cadastro_botao_cancelar">Cancelar</string>
    <string name="cadastro_botao_salvar">Salvar</string>
    <string name="desenvolvido_por">Desenvolvido por</string>
    <string name="drawer_tarefas">Tarefas</string>
    <string name="drawer_arquivos_enviados">Arquivos enviados</string>
    <string name="drawer_sobre">Sobre</string>
    <string name="menu_arquivo_ver_detalhes">Ver detalhes</string>
    <string name="menu_arquivo_abrir_arquivo">Abrir arquivo</string>
    <string name="menu_arquivo_imprimir">Imprimir</string>
    <string name="menu_arquivo_editar">Editar</string>
    <string name="menu_arquivo_excluir">Excluir</string>
</resources>
