<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tarefa"
            android:icon="@drawable/ic_tarefa"
            android:title="@string/drawer_tarefas"
            android:checked="true"/>
        <item
            android:id="@+id/nav_arq_env"
            android:icon="@drawable/ic_historico"
            android:title="@string/drawer_arquivos_enviados" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_users"
            android:title="@string/drawer_sobre" />

    </group>

</menu>



<!--recyclerView e CardView -->