<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sobre">

    <TextView
        android:paddingLeft="16dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texto_fonte1"
        android:textSize="30dp"
        android:text="PrintServer App"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:typeface="sans"
        android:elevation="2dp"
        />

    <TextView
        android:paddingLeft="16dp"
        android:paddingTop="40dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texto_fonte2"
        android:text="v 0.0.1"
        android:elevation="2dp"
        />

    <TextView
        android:paddingLeft="16dp"
        android:paddingTop="90dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:id="@+id/texto_fonte3"
        android:textColor="@color/colorPrimary"
        android:text="Desenvolvido por"
        />

    <TextView
        android:paddingLeft="16dp"
        android:paddingTop="120dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:id="@+id/texto_fonte4"
        android:text="@string/nome_sobre"
        android:textStyle="bold"
        />

    <TextView
        android:paddingLeft="16dp"
        android:paddingTop="220dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:id="@+id/texto_fonte5"
        android:text="@string/desenvolvimento_app"
        android:textStyle="italic"
        />

    <TextView
        android:paddingLeft="16dp"
        android:paddingTop="340dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:id="@+id/texto_fonte6"
        android:text="@string/professor_nome"
        android:textStyle="bold"
        />
</FrameLayout>